Updated to recent jenkins version: - Updated dependencies - Cleaned up some spotbugs warnings - Fixed bugs in javadocs - Fixed jelly code to be prevent XSS security issues - Fixed path separators in test